Correcting navbar sizing so there isn't anymore cropping.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,69 +4,13 @@
 
 
 
-/* Text alterations */
-
-h1, 
-h3,
-.aHeader,
-.navbar-light .navbar-text a ,{
-	font-family: 'Georgia', Times, 'Times New Roman', serif;
-	padding: 10px 10px 0px 10px;
-	line-height: 80px;
-	color: #ffffff;
-	background-color: #4aaaa5;
-	margin-top: 10px;
-}
-
-/* Padding in the navbar to 0 so it centers better */
-.navbar.navbar-toggleable-md.navbar-light.bg-faded {
-	padding: 0px;
-}
-
-h1 {
-	font-family: 'Georgia', Times, 'Times New Roman', serif;
-	padding: 5px 0px 0px 15px;
-	margin: 0px -15px 5px -15px;
-	background-color: #4aaaa5;
-	color:whitesmoke;
-}
-
-h3 {
-	font-family: 'Georgia', Times, 'Times New Roman', serif;
-	padding: 5px 0px 0px 10px;
-	margin: 0px -30px 5px -30px;
-	background-color: #4aaaa5;
-	color:whitesmoke;
-	font-size: 1.70rem;
-}
-
-.pFooter{
-	text-align: center;
-}
-.nav-item{
-	font-size: 16;
-	color:whitesmoke;
-	font-family: 'Georgia', Times, 'Times New Roman', serif;
-}
-
-p,
-fname,
-lname,
-subject {
-	padding: 10px 0px 0px 0px;
-	font-family: 'Arial', 'Helvetica Neue', 'Helvetica', sans-serif;
-	font-size: 16px;
-	color: #666666;
-	letter-spacing: 1px;
-}
-
-
 
 /* Adding Color to the background of classes and the body */
 
 body {
 	background-image: url("assets/images/round.png");
 	background-color: coral;
+	font-size:.85rem;
 }
 
 .col-md-3,
@@ -125,6 +69,65 @@ footer {
 .sideBar {
 	height:200px;
 }
+
+
+/* Text alterations */
+
+h1, 
+h3,
+.aHeader,
+.navbar-light .navbar-text a ,{
+	font-family: 'Georgia', Times, 'Times New Roman', serif;
+	padding: 10px 10px 0px 10px;
+	line-height: 80px;
+	color: #ffffff;
+	background-color: #4aaaa5;
+	margin-top: 10px;
+}
+
+/* Padding in the navbar to 0 so it centers better */
+.navbar.navbar-toggleable-md.navbar-light.bg-faded {
+	padding: 0px;
+}
+
+h1 {
+	font-family: 'Georgia', Times, 'Times New Roman', serif;
+	padding: 5px 0px 0px 15px;
+	margin: 0px -15px 5px -15px;
+	background-color: #4aaaa5;
+	color:whitesmoke;
+}
+
+h3 {
+	font-family: 'Georgia', Times, 'Times New Roman', serif;
+	padding: 5px 0px 0px 10px;
+	margin: 0px -30px 5px -30px;
+	background-color: #4aaaa5;
+	color:whitesmoke;
+	font-size: 1.70rem;
+}
+
+.pFooter{
+	text-align: center;
+}
+.nav-item{
+	font-size: 10;
+	color:whitesmoke;
+	font-family: 'Georgia', Times, 'Times New Roman', serif;
+}
+
+p,
+fname,
+lname,
+subject {
+	padding: 10px 0px 0px 0px;
+	font-family: 'Arial', 'Helvetica Neue', 'Helvetica', sans-serif;
+	font-size: 16px;
+	color: #666666;
+	letter-spacing: 1px;
+}
+
+
 
 
 /* 
